docker image for sample in memory app